# MarketPulse_official

./: main.py  package-lock.json  package.json  pyproject.toml
backend/: .env  Consumer_insight.py  dashboard.py  main.py  moneypulse_model_v2.xgb  product_review.py  reports_recommendations.py  test_main.py  train_multiple_models.py
backend/routes/: auth.py
src/: App.js  Geminichatbot.js  firebaseconfig.js  index.css  pyproject.toml
