[tool.poetry]
name = "marketpulse-backend"
version = "0.1.0"
description = "Backend for MarketPulse"
authors = ["Your Name <you@example.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
pandas = ">=2.0.0,<3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
